--- a/listmarket/pubspec.yaml
+++ b/listmarket/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  path_provider: ^2.0.11
+  table_calendar: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   path: 
-  sqflite:
+  sqflite: ^2.2.5
   sqflite_common_ffi: ^2.2.5
 
 dev_dependencies:
