--- a/listmarket/pubspec.yaml
+++ b/listmarket/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   path: 
-  sqflite: ^2.2.5
+  # sqflite: ^2.2.5
+  sqflite:
   sqflite_common_ffi: ^2.2.5
 
 
